--- a/public/css/app.css
+++ b/public/css/app.css
@@ -708,23 +708,14 @@ select {
 .left-0 {
   left: 0px;
 }
-.top-1\/3 {
-  top: 33.333333%;
-}
-.bottom-8 {
-  bottom: 2rem;
-}
-.right-8 {
-  right: 2rem;
+.top-1\/4 {
+  top: 25%;
 }
 .bottom-auto {
   bottom: auto;
 }
 .bottom-0 {
   bottom: 0px;
-}
-.top-1\/4 {
-  top: 25%;
 }
 .z-0 {
   z-index: 0;
@@ -1071,9 +1062,6 @@ select {
 .w-screen {
   width: 100vw;
 }
-.w-44 {
-  width: 11rem;
-}
 .w-7 {
   width: 1.75rem;
 }
@@ -1241,20 +1229,17 @@ select {
 .gap-5 {
   gap: 1.25rem;
 }
-.gap-4 {
-  gap: 1rem;
+.gap-8 {
+  gap: 2rem;
 }
 .gap-6 {
   gap: 1.5rem;
 }
-.gap-7 {
-  gap: 1.75rem;
-}
-.gap-8 {
-  gap: 2rem;
-}
 .gap-12 {
   gap: 3rem;
+}
+.gap-4 {
+  gap: 1rem;
 }
 .gap-y-6 {
   row-gap: 1.5rem;
@@ -1433,10 +1418,6 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
-.bg-yellow-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(250 204 21 / var(--tw-bg-opacity));
-}
 .bg-gray-600\/60 {
   background-color: rgb(75 85 99 / 0.6);
 }
@@ -1503,9 +1484,9 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(254 202 202 / var(--tw-bg-opacity));
 }
-.bg-green-300 {
+.bg-blue-600 {
   --tw-bg-opacity: 1;
-  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
 }
 .fill-current {
   fill: currentColor;
@@ -1573,10 +1554,6 @@ select {
   padding-left: 2rem;
   padding-right: 2rem;
 }
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
 .px-16 {
   padding-left: 4rem;
   padding-right: 4rem;
@@ -1588,6 +1565,10 @@ select {
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
+}
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 .px-0 {
   padding-left: 0px;
@@ -2007,6 +1988,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(219 234 254 / var(--tw-bg-opacity));
 }
+.hover\:bg-blue-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+}
 .hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -2233,16 +2218,6 @@ select {
   .sm\:text-right {
     text-align: right;
   }
-
-  .sm\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
-
-  .sm\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
 }
 @media (min-width: 768px) {
 
@@ -2258,6 +2233,10 @@ select {
     left: 33.333333%;
   }
 
+  .md\:top-1\/3 {
+    top: 33.333333%;
+  }
+
   .md\:left-0 {
     left: 0px;
   }
@@ -2268,10 +2247,6 @@ select {
 
   .md\:bottom-0 {
     bottom: 0px;
-  }
-
-  .md\:top-1\/3 {
-    top: 33.333333%;
   }
 
   .md\:ml-64 {
@@ -2441,11 +2416,6 @@ select {
     padding-right: 2.5rem;
   }
 
-  .md\:px-24 {
-    padding-left: 6rem;
-    padding-right: 6rem;
-  }
-
   .md\:px-36 {
     padding-left: 9rem;
     padding-right: 9rem;
@@ -2463,14 +2433,14 @@ select {
     text-align: left;
   }
 
-  .md\:text-lg {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
-  }
-
   .md\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .md\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 
   .md\:text-sm {
@@ -2595,6 +2565,11 @@ select {
     padding-right: 2rem;
   }
 
+  .lg\:px-48 {
+    padding-left: 12rem;
+    padding-right: 12rem;
+  }
+
   .lg\:py-2 {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
@@ -2603,16 +2578,6 @@ select {
   .lg\:py-6 {
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
-  }
-
-  .lg\:px-36 {
-    padding-left: 9rem;
-    padding-right: 9rem;
-  }
-
-  .lg\:px-48 {
-    padding-left: 12rem;
-    padding-right: 12rem;
   }
 
   .lg\:text-left {
